# opencv-course-practice

lab2/: CMakeLists.txt  hgt.cpp
maljutina_labs/: lab_01.py
